; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_configfiles.c_mp_load_auto_profiles.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_configfiles.c_mp_load_auto_profiles.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MPContext = type { i32 }

@.str = private unnamed_addr constant [9 x i8] c"protocol\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"extension\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_load_auto_profiles(%struct.MPContext* %0) #0 {
  %2 = alloca %struct.MPContext*, align 8
  store %struct.MPContext* %0, %struct.MPContext** %2, align 8
  %3 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %4 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %5 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @bstr0(i32 %6)
  %8 = call i32 @mp_split_proto(i32 %7, i32* null)
  %9 = call i32 @mp_auto_load_profile(%struct.MPContext* %3, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %8)
  %10 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %11 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %12 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @mp_splitext(i32 %13, i32* null)
  %15 = call i32 @bstr0(i32 %14)
  %16 = call i32 @mp_auto_load_profile(%struct.MPContext* %10, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i32 %15)
  %17 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %18 = call i32 @mp_load_per_file_config(%struct.MPContext* %17)
  ret void
}

declare dso_local i32 @mp_auto_load_profile(%struct.MPContext*, i8*, i32) #1

declare dso_local i32 @mp_split_proto(i32, i32*) #1

declare dso_local i32 @bstr0(i32) #1

declare dso_local i32 @mp_splitext(i32, i32*) #1

declare dso_local i32 @mp_load_per_file_config(%struct.MPContext*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
